new static files are added and some changes are done

--- a/hirk/template/user/forgot-password.html
+++ b/hirk/template/user/forgot-password.html
@@ -18,7 +18,7 @@
                             <button class="btn btn-primary account-btn" type="submit">{{ user_message_0007 }}</button>
                         </div>
                         <div class="account-footer">
-                            <p>{{ user_message_0008 }} <a href="{% url 'login_view' %}">{{ user_message_0001 }}</a></p>
+                            <p>{{ user_message_0008 }} <a href="{% url 'signin_view' %}">{{ user_message_0001 }}</a></p>
                         </div>
                     </form>
                 </div>
